# chess_AI

./: pyproject.toml
src/: main.ipynb
src/ai_models/: __init__.py  abstact_ai.py  deep_q_network.py  minmax_nn_eval.py
