[tool.poetry]
name = "acai"
version = "0.1.0"
description = "part 2 of the checkmate ai algorithm"
authors = ["LinSFa <kevin.vandervaeren@ulb.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.12.1"
torchvision = "0.13.1"
chess = "^1.6.1"
ipykernel = "^6.27.1"
pytest = "8.0.1"
numpy = "^1.22.0"
bitarray = "^1.9.2"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
